...
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="93dp"
        android:layout_height="98dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_light" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="131dp"
        android:layout_height="121dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/roundcorner"
...
